Improve ajax req and add full deploy task to build